# kindle-notion-booksync

./: .env  .env.example  .gitignore  README.md  debug_notion_fetch.py  extract_kindle_data.py  gemini.md  inspect_notion_db.py  list_empty_asin_titles.py  main.py  pyproject.toml  register_single_book.py  register_to_notion.py  update_notion_asins.py  update_single_asin.py
src/kindle_data/: extractor.py  processor.py
src/notion_integration/: api_integrations.py  client.py  data_fetcher.py  registrar.py
